--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <title>Will Viagens</title>
+  <meta name="description" content="agencia de viagens , aereo , hospedagem , aluguel de carros e seguros">
 </head>
 
 <body>
+  <header class="header-bg">
+    <div class="header">
+      <a href="./"><img class="logo" src="./img/will_logo_preta-svg.svg" alt="willviagens"></a>
+
+      <nav aria-label="primaria">
+        <ul class="header-menu">
+          <li><a href="./passagens.html">aereo</a></li>
+          <li><a href="./hospedagem.html">hospedagem</a></li>
+          <li><a href="./aluguel-de-carros.html">carros</a></li>
+          <li><a href="./seguros.html">seguros</a></li>
+          <li><a href="./contato.html">contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   <h1>Bem vindo a Will Viagens</h1>
 </body>
 
